# libfdata

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.macosx  README.mingw  README.static  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libfdata-wiki.ini  libfdata.ini  libfdata.pc.in  libfdata.spec.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh
.travis/: runtests.sh  script.sh
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libfdata.h.in
include/libfdata/: definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libfdata/: Makefile.am  libfdata.c  libfdata.rc.in  libfdata_area.c  libfdata_area.h  libfdata_block.c  libfdata_block.h  libfdata_block_reference.c  libfdata_block_reference.h  libfdata_btree.c  libfdata_btree.h  libfdata_btree_node.c  libfdata_btree_node.h  libfdata_btree_range.c  libfdata_btree_range.h  libfdata_buffer.c  libfdata_buffer.h  libfdata_buffer_reference.c  libfdata_buffer_reference.h  libfdata_cache.c  libfdata_cache.h  libfdata_definitions.h  libfdata_definitions.h.in  libfdata_error.c  libfdata_error.h  libfdata_extern.h  libfdata_inline.h  libfdata_libcdata.h  libfdata_libcerror.h  libfdata_libcnotify.h  libfdata_libcstring.h  libfdata_libfcache.h  libfdata_list.c  libfdata_list.h  libfdata_list_element.c  libfdata_list_element.h  libfdata_mapped_range.c  libfdata_mapped_range.h  libfdata_notify.c  libfdata_notify.h  (+22 more)
libfdata/new/: libfdata_stream.c  libfdata_stream.h
libfdata/old/: libfdata_stream.c  libfdata_stream.h  libfdata_stream_reference.c
m4/: libfcache.m4
manuals/: Makefile.am  libfdata.3
msvscpp/: Makefile.am  libfdata.sln
msvscpp/fdata_test_area/: fdata_test_area.vcproj
msvscpp/fdata_test_btree/: fdata_test_btree.vcproj
msvscpp/fdata_test_btree_node/: fdata_test_btree_node.vcproj
msvscpp/fdata_test_btree_range/: fdata_test_btree_range.vcproj
msvscpp/fdata_test_cache/: fdata_test_cache.vcproj
msvscpp/fdata_test_error/: fdata_test_error.vcproj
msvscpp/fdata_test_get_version/: fdata_test_get_version.vcproj
msvscpp/fdata_test_list/: fdata_test_list.vcproj
msvscpp/fdata_test_list_element/: fdata_test_list_element.vcproj
msvscpp/fdata_test_mapped_range/: fdata_test_mapped_range.vcproj
msvscpp/fdata_test_notify/: fdata_test_notify.vcproj
msvscpp/fdata_test_range/: fdata_test_range.vcproj
msvscpp/fdata_test_range_list/: fdata_test_range_list.vcproj
msvscpp/fdata_test_stream/: fdata_test_stream.vcproj
msvscpp/fdata_test_support/: fdata_test_support.vcproj
msvscpp/fdata_test_tree/: fdata_test_tree.vcproj
msvscpp/fdata_test_tree_node/: fdata_test_tree_node.vcproj
msvscpp/fdata_test_vector/: fdata_test_vector.vcproj
msvscpp/libfdata/: libfdata.vcproj
msvscpp/libfdata_dll/: libfdata_dll.vcproj
tests/: Makefile.am  fdata_test_area.c  fdata_test_btree.c  fdata_test_btree_node.c  fdata_test_btree_range.c  fdata_test_cache.c  fdata_test_error.c  fdata_test_get_version.c  fdata_test_libcerror.h  fdata_test_libcstring.h  fdata_test_libfcache.h  fdata_test_libfdata.h  fdata_test_list.c  fdata_test_list_element.c  fdata_test_macros.h  fdata_test_mapped_range.c  fdata_test_memory.c  fdata_test_memory.h  fdata_test_notify.c  fdata_test_range.c  fdata_test_range_list.c  fdata_test_stream.c  fdata_test_support.c  fdata_test_tree.c  fdata_test_tree_node.c  fdata_test_unused.h  fdata_test_vector.c  pkgbuild.sh  runtests.sh  syncsharedlibs.sh  test_api_types.ps1  test_api_types.sh  test_area.sh  test_btree.sh  test_library.ps1  test_library.sh  test_list.sh  test_range_list.sh  test_vector.sh
