include_HEADERS = \
	libfdata.h

pkginclude_HEADERS = \
	libfdata/definitions.h \
	libfdata/error.h \
	libfdata/extern.h \
	libfdata/features.h \
	libfdata/types.h

EXTRA_DIST = \
	libfdata.h.in \
	libfdata/definitions.h.in \
	libfdata/features.h.in \
	libfdata/types.h.in

DISTCLEANFILES = \
	libfdata.h \
	libfdata/definitions.h \
	libfdata/features.h \
	libfdata/types.h \
	Makefile \
	Makefile.in

