MSVSCPP_FILES = \
	fdata_test_area/fdata_test_area.vcproj \
	fdata_test_btree/fdata_test_btree.vcproj \
	fdata_test_error/fdata_test_error.vcproj \
	fdata_test_list/fdata_test_list.vcproj \
	fdata_test_range_list/fdata_test_range_list.vcproj \
	fdata_test_support/fdata_test_support.vcproj \
	fdata_test_vector/fdata_test_vector.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcnotify/libcnotify.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdata.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

