MSVSCPP_FILES = \
	fdata_test_area/fdata_test_area.vcproj \
	fdata_test_cache/fdata_test_cache.vcproj \
	fdata_test_error/fdata_test_error.vcproj \
	fdata_test_list/fdata_test_list.vcproj \
	fdata_test_list_element/fdata_test_list_element.vcproj \
	fdata_test_mapped_range/fdata_test_mapped_range.vcproj \
	fdata_test_notify/fdata_test_notify.vcproj \
	fdata_test_range/fdata_test_range.vcproj \
	fdata_test_range_list/fdata_test_range_list.vcproj \
	fdata_test_stream/fdata_test_stream.vcproj \
	fdata_test_support/fdata_test_support.vcproj \
	fdata_test_vector/fdata_test_vector.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcnotify/libcnotify.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdata.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

DISTCLEANFILES = \
	Makefile \
	Makefile.in

